@@ -40,6 +40,7 @@ public interface Constants
   public static final String UNIT_ATTATCHMENT_NAME = "unitAttatchment";
   public static final String TECH_ATTATCHMENT_NAME = "techAttatchment";
   public static final String TERRITORY_ATTATCHMENT_NAME = "territoryAttatchment";
+  public static final String PLAYER_ATTATCHMENT_NAME = "playerAttatchment";
   public static final String IPCS = "IPCs";
   public static final String VPS = "VPs";
   public static final int    MAX_DICE = 6;
